Fix conflicting width property in recipe css.
Fixed a conflict where width for the recipe-pic
class was set to auto and then set to 50% after,
causing the image to appear stretched. Also changed
left right margin auto to just margin: auto;

--- a/css/recipe_styles.css
+++ b/css/recipe_styles.css
@@ -13,11 +13,9 @@ h1,h2{
 
 .recipe-pic{
     display:block;
-    margin-left:auto;
-    margin-right:auto;
+    margin:auto;
     height: 300px;
     width: auto;
-    width:50%;
 
 }
 
